part3/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  log
  template:
    metadata:
      labels:
        app:  log
    spec:
      containers:
        - name: log-generator
          image: younes0204/log-generator
          ports:
            - containerPort: 8081
        - name: log-reader
          image: younes0204/log-reader
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
          ports:
            - containerPort: 8082
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config-map
