part3/log-output/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 2
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        #storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
