part3/log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP 
  selector:
    app: log
  ports:
    - name: log-generator
      protocol: TCP
      port: 8081
      targetPort: 8081 
    - name: log-reader
      protocol: TCP
      port: 8082
      targetPort: 8082
