part3/log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ing
spec:
  rules:
    - http:
        paths:
          - path: /log_Generator
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 8081

          - path: /log_reader
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 8082
